--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -83,3 +83,45 @@
 .up i {
   color: #272727;
 }
+
+
+
+.round-button {
+  position: fixed;
+  top: var(--topPercent);
+  right: 20px;
+  width: 30px;
+  height: 30px;
+  z-index:9999;
+  margin-top:-15px;
+  border-radius: 50%;
+  border: 2px solid #bf672f70;
+  text-decoration:none;
+  font-size:14px;
+  //font-weight:bold;
+  cursor: pointer;
+  display: inline-block;
+  color: white;
+}
+div.parentElement{
+  text-align: center;
+  font-size : 20px; width: 100%; height: 100px;
+}
+
+.title{
+  position: fixed;
+  top: 46%;
+  right: 60px;
+  z-index:9999;
+  margin-top:-15px;
+  color: white;
+}
+.round-button:hover {
+  border: 2px solid #ff9800;
+  background: #ff9800;
+  color: white;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  //background: #e3550c;
+}
