--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -12,7 +12,7 @@
     content: '';
     display: block;
     position: absolute;
-    width: 0px;
+    width: 0;
     height: 100%;
     left: 0;
     bottom: 0;
@@ -101,27 +101,36 @@
   //font-weight:bold;
   cursor: pointer;
   display: inline-block;
-  color: white;
-}
-div.parentElement{
-  text-align: center;
-  font-size : 20px; width: 100%; height: 100px;
+  color: #ffffff70;
 }
 
 .title{
   position: fixed;
-  top: 46%;
-  right: 60px;
+  right: 65px;
   z-index:9999;
   margin-top:-15px;
-  color: white;
+  color: #ffffff00;
 }
 .round-button:hover {
-  border: 2px solid #ff9800;
-  background: #ff9800;
+  background: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  border: #ffffff00;
   color: white;
   width: 35px;
   height: 35px;
   text-align: center;
-  //background: #e3550c;
+}
+.round-button:hover + .title {
+  color: #ffffff;
+}
+
+.onVisitSection{
+  background: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  border: #ffffff00;
+  color: white;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+}
+.onVisitSection + .title {
+  color: #ffffff;
 }
