Minor changes, regarding colours and some effects.

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #ca5c03;
+$secondary-color: #ef9f00;
+//$secondary-color: #fcc500;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
@@ -9,7 +10,7 @@ $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #006666; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
