--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -122,8 +122,8 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
-  height:100vh;  /* responsive height */
+ // width: 100%;
+  //height:100vh;  /* responsive height */
 
 
 }
