--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -1,8 +1,13 @@
 #about {
   //background-color: $primary-color;
-  background-image: url(../images/skyMirror.jpg);
+  min-height: 100vh;
+  height: 100vh;
+  //background-image: url(../images/skyMirror.jpg);
   background-size: cover;
-  background-color: #cccccc;
+  display: flex;
+  align-items: center;
+  border-bottom: 0px;
+  //background-color: #cccccc;
   //background-image: linear-gradient(
   //  135deg,
   //  $primary-color 0%,
@@ -13,7 +18,7 @@
   border-top: 0px;
   //-webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   //clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 10%;
+  //padding-bottom: 10%;
 
   @include respond(tab-land) {
     height: 100%;
