--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -13,8 +13,10 @@
   //  $primary-color 0%,
   //  $secondary-color 100%
   //);
+  overflow:auto;
   color: $white-color;
   //height: 100%;
+  overflow:hidden;
   border-top: 0px;
   //-webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   //clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
@@ -57,14 +59,30 @@
 
       &-text {
         text-align: left;
-
+        @include respond(phone-xs){
+          font-size: 0.7rem;
+          text-align: left;
+        }
+        @include respond(phone) {
+          font-size: 1.0rem;
+          text-align: left;
+        }
         @include respond(tab-port) {
+          font-size: 1.2rem;
+          text-align: center;
+        }
+        @include respond(tab-land) {
           font-size: 1.5rem;
           text-align: center;
         }
-        @include respond(phone) {
-          font-size: 1.6rem;
-          text-align: center;
+
+        @include respond (medium-desktop) {
+          font-size: 1.7rem;
+          text-align: left;
+        }
+        @include respond (big-desktop) {
+          font-size: 2.0rem;
+          text-align: left;
         }
 
         &--important {
