--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -10,7 +10,7 @@ $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #006666; // For Headings
+$dark-blue-text: #ffffff; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
