--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,5 +1,4 @@
 #projects {
-  background-color: $white-color;
   color: $dark-blue-text;
   width: 100%;
   height: 100%;
@@ -12,80 +11,140 @@
   .project-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center; // Centers children horizontally
-    justify-content: center; // Centers children vertically
-    width: 100%; // Takes full width of the parent
-    margin: auto; // Center the wrapper in the parent
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: auto;
+    padding-left: 2rem;
+    padding-right: 5rem;
 
     @include respond(phone) {
       margin-bottom: 0;
-    }
-
-    .row {
-      margin-bottom: 8rem;
-
-      @include respond(phone) {
-        margin-bottom: 4rem;
-      }
+      padding: 1rem;
     }
   }
 }
-.project-image {
-  max-width: 60%; /* Image can grow up to 100% of its container's width */
-  min-width: 60%;
-  min-height: 60%;
-  height: 100%;   /* Height adjusts automatically to maintain aspect ratio */
-  object-fit: cover; /* Ensures the image covers the set width/height area */
-  border-radius: 15px; /* Optional, for styling */
-}
-
-
 
 .sproject {
-  display: flex;
-  flex-direction: row; /* Adjust direction as needed */
-  justify-content: center; /* Center items horizontally */
-  align-items: center; /* Center items vertically */
-  /* Other styles */
-}
-@media (min-width: 1024px) {
-  .project-image {
-    max-width: 800px; /* Larger size on big screens */
-  }
-  .sproject {
-    /* Adjust flexbox settings or width for larger screens if needed */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "title title"
+    "image text"
+    "icons icons"
+    "buttons buttons";
+  gap: 20px;
+  align-items: start;
+  justify-content: center; /* Aligns the grid horizontally in the center */
+  margin: auto; /* Centers the grid block in the available horizontal space */
+  max-width: 2000px; /* Set a max-width for larger screens */
+
+
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "title"
+      "image"
+      "text"
+      "icons"
+      "buttons";
   }
 }
 
-/* Media query for smaller screens */
-@media (max-width: 768px) {
-  .project-image {
-    max-width: 100%; /* Full width on smaller screens */
+.project-icons {
+  grid-area: icons;
+  display: flex;
+  justify-content: center; // Centers the icons horizontally
+  align-items: center; // Aligns the icons vertically
+  gap: 30px; // Spacing between icons
+  padding: 10px 0; // Padding above and below the icon list
+  width: fit-content; // Restricts the width to its content
+  margin: auto; // Centers the container in the grid area
+}
+
+.icon-container {
+  position: relative; // Needed for absolute positioning of the text
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+
+  .project-icon {
+    width: 100px; // Smaller width
+    height: 100px; // Ensuring the height is the same as the width
+    object-fit: contain; // Keeps the image aspect ratio
+    transition: box-shadow 0.3s ease; // Smooth transition for the glow effect
   }
-  .sproject {
-    /* Adjust flexbox settings or width for smaller screens if needed */
+
+  .icon-text {
+    position: absolute;
+    bottom: -20px; // Adjust as needed
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s, visibility 0.3s;
+    font-size: 15px;
   }
+
+  &:hover .icon-text {
+    opacity: 1;
+    visibility: visible;
+  }
+  &:hover .project-icon {
+    filter: drop-shadow(1px 1px 10px #b07219) brightness(1);
+  }
+}
+
+.project-wrapper__text-title {
+  font-size: 2.2rem; // Even larger font size
+  font-weight: 550; // Heavier font weight for more boldness
+  // You can add other styling properties if needed
+}
+
+.project-title {
+  grid-area: title;
+  text-align: center;
+  color: $dark-blue-text;
+  font-size: 30px;
 }
 
 .project-text {
-  display: flex;
-  flex-direction: column;
-  width: 60%; // Adjust as needed
-  padding: 10px; // Add padding for spacing
-}
-
-.project-description {
+  grid-area: text;
+  width: 100%;
   padding: 10px;
 }
 
+.project-image {
+  grid-area: image;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 15px;
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
 .project-buttons {
+  grid-area: buttons;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 10px;
+  padding-top: 20px;
+}
+
+.project-description {
+  font-size: 2.0rem;
+  padding: 10px;
 }
 
 .column {
-  width: 100%; // Full width within the flex container
+  width: 100%;
   padding: 10px;
 }
 
@@ -107,13 +166,13 @@
   animation: bannermove 5s linear infinite;
   height: 500px;
   width: auto;
-}
 
-.photobanner:hover {
-  -webkit-animation-play-state: paused;
-  -moz-animation-play-state: paused;
-  -o-animation-play-state: paused;
-  animation-play-state: paused;
+  &:hover {
+    -webkit-animation-play-state: paused;
+    -moz-animation-play-state: paused;
+    -o-animation-play-state: paused;
+    animation-play-state: paused;
+  }
 }
 
 @keyframes bannermove {
@@ -125,5 +184,3 @@
   }
 }
 
-/* Additional styles for other elements */
-/* You can add or adjust styles for other elements like headers, footers, etc. here */
