--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -29,8 +29,9 @@ a:hover {
   font-weight: bold;
   text-transform: uppercase;
 
-  @include respond(phone) {
+  @media (max-width: 812px) and (orientation: landscape) {
     font-size: 2.8rem;
+    margin-bottom: 2rem;
   }
 }
 
