--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -3,7 +3,13 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
+  background-size: cover;
+  background-position: center;
 
+  @media (max-width: 812px) and (orientation: landscape) {
+    background-size: 90% auto;
+    background-repeat: no-repeat;
+  }
   @include respond(tab-land) {
     padding-top: 5rem;
   }
@@ -21,6 +27,13 @@
     @include respond(phone) {
       margin-bottom: 0;
       padding: 1rem;
+    }
+    @media (max-width: 812px) and (orientation: landscape) {
+      .project-wrapper {
+        max-width: 100%;
+        height: auto;
+        overflow: hidden;
+      }
     }
   }
 }
@@ -41,14 +54,26 @@
 
 
 
-  @media (max-width: 768px) {
-    grid-template-columns: 1fr;
+  @media (max-width: 812px) and (orientation: landscape) {
+    grid-template-columns: 1fr 1fr;
     grid-template-areas:
-      "title"
-      "image"
-      "text"
-      "icons"
-      "buttons";
+      "title title"
+      "image text"
+      "icons buttons";
+    max-width: 600px;
+    gap: 10px;
+
+    .project-description {
+      font-size: smaller;
+    }
+
+    .project-buttons a {
+      font-size: smaller;
+      padding: 5px 10px;
+      @media (max-width: 812px) and (orientation: landscape) {
+        padding: 2px 10px;
+      }
+    }
   }
 }
 
@@ -61,6 +86,10 @@
   padding: 10px 0; // Padding above and below the icon list
   width: fit-content; // Restricts the width to its content
   margin: auto; // Centers the container in the grid area
+  @media (max-width: 812px) and (orientation: landscape) {
+    gap: 15px;
+    padding: 5px 0;
+  }
 }
 
 .icon-container {
@@ -75,6 +104,10 @@
     height: 100px; // Ensuring the height is the same as the width
     object-fit: contain; // Keeps the image aspect ratio
     transition: box-shadow 0.3s ease; // Smooth transition for the glow effect
+    @media (max-width: 812px) and (orientation: landscape) {
+      width: 30px;
+      height: 30px;
+    }
   }
 
   .icon-text {
@@ -87,6 +120,10 @@
     visibility: hidden;
     transition: opacity 0.3s, visibility 0.3s;
     font-size: 15px;
+    @media (max-width: 812px) and (orientation: landscape) {
+      font-size: 5px;
+      bottom: -10px;
+    }
   }
 
   &:hover .icon-text {
@@ -109,12 +146,18 @@
   text-align: center;
   color: $dark-blue-text;
   font-size: 30px;
+  @media (max-width: 812px) and (orientation: landscape) {
+    font-size: 20px;
+  }
 }
 
 .project-text {
   grid-area: text;
   width: 100%;
   padding: 10px;
+  @media (max-width: 812px) and (orientation: landscape) {
+    padding: 5px;
+  }
 }
 
 .project-image {
