--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -1,26 +1,14 @@
 #about {
-  //background-color: $primary-color;
   min-height: 100vh;
   height: 100vh;
-  //background-image: url(../images/skyMirror.jpg);
   background-size: cover;
   display: flex;
   align-items: center;
-  border-bottom: 0px;
-  //background-color: #cccccc;
-  //background-image: linear-gradient(
-  //  135deg,
-  //  $primary-color 0%,
-  //  $secondary-color 100%
-  //);
-  overflow:auto;
+  border-bottom: 0;
   color: $white-color;
-  //height: 100%;
-  overflow:hidden;
-  border-top: 0px;
-  //-webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  //clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  //padding-bottom: 10%;
+  border-top: 0;
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
+
 
   @include respond(tab-land) {
     height: 100%;
@@ -59,30 +47,18 @@
 
       &-text {
         text-align: left;
-        @include respond(phone-xs){
-          font-size: 0.7rem;
-          text-align: left;
+        font-size: 1.5rem;
+        @media (max-width: 812px) and (orientation: landscape) {
+          .project-wrapper {
+            font-size: 0.7rem;
+            text-align: left;
+          }
         }
-        @include respond(phone) {
-          font-size: 1.0rem;
-          text-align: left;
-        }
-        @include respond(tab-port) {
-          font-size: 1.2rem;
-          text-align: center;
-        }
-        @include respond(tab-land) {
-          font-size: 1.5rem;
-          text-align: center;
-        }
-
-        @include respond (medium-desktop) {
-          font-size: 1.7rem;
-          text-align: left;
-        }
-        @include respond (big-desktop) {
-          font-size: 2.0rem;
-          text-align: left;
+        @media (max-width: 812px) and (orientation: portrait) {
+          .project-wrapper {
+            font-size: 0.7rem;
+            text-align: center;
+          }
         }
 
         &--important {
@@ -106,11 +82,6 @@
   }
 }
 
-#bodycontainer{
-  position:absolute;
-  height:100%;
-  width:100%
-}
 #logo{
   position: absolute;
 }
@@ -123,7 +94,6 @@ body{background-color:#1A1919;text-align:center;}
   width: inherit;
   align-items: inherit center;
   justify-content: inherit center;
-  overflow:hidden;
   object-fit: cover;
 }
 
