--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -13,14 +13,8 @@
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: -1;
 
-  // If you want to set a background image on the hero section, uncomment these with yout custom image
-
-  //background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
-  background-color: #00000000;
-  background-position: center;
-  background-size: cover;
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
@@ -65,71 +59,12 @@
   }
 }
 
-/*.large-header {*/
-/*    //position: relative;*/
-/*    width: 100%;*/
-/*    overflow: hidden;*/
-/*    background-size: cover;*/
-/*    background: #111 center center;*/
-/*    z-index: 1;*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    left: 0;*/
-
-/*    !* Preserve aspet ratio *!*/
-/*    min-width: 100%;*/
-/*    min-height: 100%;*/
-
-/*}*/
-
-/*.demo .large-header {*/
-
-/*    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");*/
-/*}*/
-
-/*.main-title {*/
-/*    position: absolute;*/
-/*    margin: 0;*/
-/*    padding: 5;*/
-/*    color: #F9F1E9;*/
-/*    text-align: center;*/
-/*    top: 50%;*/
-/*    left: 50%;*/
-/*    -webkit-transform: translate3d(-40%, -30%, 0);*/
-/*    transform: translate3d(-40%, -30%, 0);*/
-/*}*/
-
-/*.demo .main-title {*/
-/*    text-transform: uppercase;*/
-/*    font-size: 2.2em;*/
-/*    letter-spacing: 2.1em;*/
-/*}*/
-
-/*.main-title .thin {*/
-/*    font-weight: 200;*/
-/*}*/
-
-/*@media only screen and (max-width: 768px) {*/
-/*    .demo .main-title {*/
-/*        font-size: 3em;*/
-/*    }*/
-/*}*/
-
 .large-header {
   position: relative;
   display: flex;
-  overflow: hidden;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
- // width: 100%;
-  //height:100vh;  /* responsive height */
-
-
-}
-
-.demo .large-header {
-  //background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
 }
 
 .main-title {
@@ -156,6 +91,7 @@
 
 @media only screen and (max-width: 768px) {
   .demo .main-title {
+    padding: 0rem 1rem;
     font-size: 3em;
   }
 }
