--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -4,11 +4,14 @@
   height: 100%;
   min-height: 100vh;
   background-size: cover;
-  background-position: center;
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
 
-  @media (max-width: 812px) and (orientation: landscape) {
-    background-size: 90% auto;
-    background-repeat: no-repeat;
+
+
+  @media (max-width: 812px) {
+    #projects {
+      background-size: 100% 100%; /* Adjust for landscape orientation */
+    }
   }
   @include respond(tab-land) {
     padding-top: 5rem;
@@ -32,7 +35,6 @@
       .project-wrapper {
         max-width: 100%;
         height: auto;
-        overflow: hidden;
       }
     }
   }
@@ -63,9 +65,6 @@
     max-width: 600px;
     gap: 10px;
 
-    .project-description {
-      font-size: smaller;
-    }
 
     .project-buttons a {
       font-size: smaller;
@@ -75,6 +74,17 @@
       }
     }
   }
+  @media (max-width: 812px) and (orientation: portrait) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "title title"
+      "image image"
+      "text text"
+      "icons icons"
+      "buttons buttons";
+    max-width: 600px;
+  }
+
 }
 
 .project-icons {
@@ -86,7 +96,7 @@
   padding: 10px 0; // Padding above and below the icon list
   width: fit-content; // Restricts the width to its content
   margin: auto; // Centers the container in the grid area
-  @media (max-width: 812px) and (orientation: landscape) {
+  @media (max-width: 812px)  {
     gap: 15px;
     padding: 5px 0;
   }
@@ -104,9 +114,9 @@
     height: 100px; // Ensuring the height is the same as the width
     object-fit: contain; // Keeps the image aspect ratio
     transition: box-shadow 0.3s ease; // Smooth transition for the glow effect
-    @media (max-width: 812px) and (orientation: landscape) {
-      width: 30px;
-      height: 30px;
+    @media (max-width: 812px)  {
+      width: 45px;
+      height: 45px;
     }
   }
 
@@ -120,8 +130,8 @@
     visibility: hidden;
     transition: opacity 0.3s, visibility 0.3s;
     font-size: 15px;
-    @media (max-width: 812px) and (orientation: landscape) {
-      font-size: 5px;
+    @media (max-width: 812px) {
+      font-size: 8px;
       bottom: -10px;
     }
   }
@@ -146,7 +156,7 @@
   text-align: center;
   color: $dark-blue-text;
   font-size: 30px;
-  @media (max-width: 812px) and (orientation: landscape) {
+  @media (max-width: 812px) {
     font-size: 20px;
   }
 }
@@ -155,7 +165,7 @@
   grid-area: text;
   width: 100%;
   padding: 10px;
-  @media (max-width: 812px) and (orientation: landscape) {
+  @media (max-width: 812px)  {
     padding: 5px;
   }
 }
@@ -184,6 +194,9 @@
 .project-description {
   font-size: 2.0rem;
   padding: 10px;
+  @media (max-width: 812px){
+    font-size: 1.5rem;
+  }
 }
 
 .column {
@@ -204,7 +217,6 @@
 .photobanner {
   position: absolute;
   left: 0;
-  overflow: hidden;
   white-space: nowrap;
   animation: bannermove 5s linear infinite;
   height: 500px;
