--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -91,19 +91,20 @@
   position: fixed;
   top: var(--topPercent);
   right: 20px;
-  width: 30px;
+  width: 80px;
   height: 30px;
-  z-index:9999;
-  margin-top:-15px;
-  border-radius: 50%;
+  z-index: 9999;
+  margin-top: -15px;
+  border-radius: 15px;
   border: 2px solid #bf672f70;
-  text-decoration:none;
-  font-size:14px;
+  text-decoration: none;
+  font-size: 14px;
   //font-weight:bold;
   cursor: pointer;
   display: inline-block;
   color: #ffffff70;
 }
+
 
 .title{
   position: fixed;
