Fixed display settings on full hd screens.

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -1,5 +1,4 @@
 #about {
-  min-height: 100vh;
   height: 100vh;
   background-size: cover;
   display: flex;
@@ -48,6 +47,9 @@
       &-text {
         text-align: center;
         font-size: 2rem;
+        @media (max-width: 1000px){
+          font-size: 1.5rem;
+        }
         @media (max-width: 812px) and (orientation: landscape) {
             font-size: 1.5rem;
             text-align: left;
