--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -52,7 +52,7 @@
   align-items: start;
   justify-content: center; /* Aligns the grid horizontally in the center */
   margin: auto; /* Centers the grid block in the available horizontal space */
-  max-width: 2000px; /* Set a max-width for larger screens */
+  max-width: 80%; /* Set a max-width for larger screens */
 
 
 
