--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,8 +1,7 @@
 .footer {
   background-color: $dark-grey;
   color: $white-color;
-  padding: 4.8rem 0;
-  height: 30vh;
+  height: 20vh;
 
   @include respond(phone) {
     border: 0px;
@@ -50,7 +49,7 @@
     font-size: 3rem;
     width: 5rem;
     height: 5rem;
-    margin: $default-font-size $default-font-size;
+    //margin: $default-font-size $default-font-size;
     transition: all 0.2s ease-in;
 
     &:hover {
