Fixed styling issues on landscape smaller screens.

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -7,6 +7,7 @@
   color: $white-color;
   border-top: 0;
   background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
+  padding-bottom: 3rem;
 
 
   @include respond(tab-land) {
