--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,8 +1,10 @@
 .footer {
   background-color: $dark-grey;
   color: $white-color;
-  height: 20vh;
-
+  height: 21vh;
+  @media only screen and (max-width: 1000px) and (orientation: landscape) {
+    height: 41vh;
+  }
   @include respond(phone) {
     border: 0px;
   }
