--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -8,7 +8,7 @@
   border-top: 0;
   background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
   padding-bottom: 3rem;
-
+  min-height: 100vh;
 
   @include respond(tab-land) {
     height: 100%;
