--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -201,6 +201,7 @@
   grid-area: image;
   width: 100%;
   height: auto;
+  max-height: 600px;
   object-fit: cover;
   border-radius: 15px;
   transition: transform 0.3s ease;
@@ -236,11 +237,15 @@
 }
 
 .project-description {
-  font-size: 2.0rem;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  margin-top: 10px;
+  margin-bottom: 20px;
   padding: 10px;
-  @media (max-width: 1000px){
-    font-size: 1.5rem;
-  }
+  border-radius: 8px;
+    @media (max-width: 1000px){
+      font-size: 1.5rem;
+    }
 }
 
 .column {
