--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -17,6 +17,11 @@
     padding-top: 5rem;
   }
 
+  .carousel-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+
   .project-wrapper {
     display: flex;
     flex-direction: column;
@@ -24,8 +29,8 @@
     justify-content: center;
     width: 100%;
     margin: auto;
-    padding-left: 2rem;
-    padding-right: 10rem;
+    padding-left: 0;
+    padding-right: 7%;
 
     @include respond(phone) {
       margin-bottom: 0;
