--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -10,6 +10,8 @@
   .carousel-wrapper {
     width: 100%;
     height: 100%;
+    align-items: center;
+    justify-content: center;
   }
 
   .project-wrapper {
@@ -165,6 +167,9 @@
 
 
 .tproject-image-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%; /* Initially, fill the container's width */
   max-width: 1000px; /* Set maximum width */
   height: 0; /* Initialize height to 0 */
@@ -216,15 +221,13 @@
 .project-text {
   grid-area: text;
   width: 100%;
-  padding: 10px;
-  /* Add a max-width to limit the text window size */
   max-width: 800px; /* Adjust this value as needed */
-  margin: 0 auto; /* Center the text window horizontally */
+  margin: 0; /* Center the text window horizontally */
   box-sizing: border-box; /* Ensure padding is included in the width */
 }
 
 .project-description {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   line-height: 1.5;
   margin-top: 10px;
   margin-bottom: 20px;
