--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -48,6 +48,7 @@
       &-text {
         text-align: center;
         font-size: 2rem;
+        z-index: 1;
         @media (max-width: 1000px){
           font-size: 1.5rem;
         }
@@ -91,6 +92,7 @@
   position: relative;
   -webkit-filter: drop-shadow(1px 1px 3px #f34b7d);
   transition: all 0.3s ease;
+  z-index: 1;
 }
 
 .neonIcon:hover {
