--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,3 +1,7 @@
+:root {
+  --background-image-url: url("https://wallpaperaccess.com/full/506444.jpg");
+}
+
 #hero {
   min-height: 100vh;
   height: 100vh;
@@ -7,7 +11,8 @@
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
-  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
+  background: var(--background-image-url) center;
+  background-size: cover;
 
   @include respond(phone) {
     padding: 0 $default-font-size;
