Rounded corners of project images. Ensured naming is the same over multiple pages.

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,5 +1,5 @@
 :root {
-  --background-image-url: url("https://wallpaperaccess.com/full/506444.jpg");
+  --background-image-url: url("https://github.com/Napalys/Portfolio/assets/11835209/34a00297-c785-46ce-90c3-95e07d2e6de1");
 }
 
 #hero {
