--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -191,6 +191,7 @@
   height: 100%; /* Make the image fill its container while maintaining aspect ratio */
   object-fit: cover; /* Cover the entire container while maintaining aspect ratio */
   transition: transform 0.3s ease; /* Smooth transition for hover effect */
+  border-radius: 20px;
 }
 
 .project-image:hover {
